# portuguese_vid

./: .env.example  .gitignore  README.md  docker-compose.yml  evaluation.json  pyproject.toml  pyproject_1.toml  setup.py  tmp.py
.github/workflows/: build_python_package.yml  create_pypi_package.yml  run_unit_tests.yml
data/: requirements.txt
data/DSLCC/: parser.py
data/brazilian_politics/: parser.py
data/build_dataset/: .gitignore  corpus_from_hf.py  original_corpus.py  process_domains.py  stats.py
data/cetem/: parser.py
data/dgsi/: parser.py
data/europarl/: hf_parser.py  local_parser.py
data/fakenews_br/: parser.py
data/hate_br/: parser.py
data/lener_br/: parser.py
data/opensubtitles/: parser.py
data/oscar/: parser.py
data/paracrawl/: parser.py
data/portuguese_presidential_elections/: docker-compose.yml  filtered_locations.json  locations.py  parser.py
demo/: dev.Dockerfile  main.py  requirements.txt
endpoint/: dev.Dockerfile  main.py
exec/: DatasetGenerator.py  Test.py  Train.py
notebooks/: data.ipynb  eval.ipynb  graph.ipynb
pt_variety_identifier/data/: others.py
pt_variety_identifier/src/: data.py  delexicalizer.py  results.py
ptvid/: constants.py
ptvid/data/: .gitignore  cleanup.py  detokenizer.py  sampler.py  split.py
ptvid/src/: data.py  delexicalizer.py  results.py  tunning.py  utils.py
scripts/: delexicalize_data.py  download_data.sh  evaluation.py  fix_data.py  fix_punctuation.py  process_data.py  train_bert.sh  train_ngram.sh
scripts/eval/: evaluate.py  run.sh
scripts/train/: final_bert.py  final_ngram.py  search_bert.sh  search_ngram.sh
src/: requirements.txt
src/all_mixed/: data.py  main.py  stats.py  tester.py  trainer.py
src/autoencoder/: .gitignore
src/embeddings/: data.py  main.py  model.py  tester.py  trainer.py
stats/: .gitignore  stats.py
test/: 1_test_detokenizer.py  test_detokenizer.py
(+72 files in other folders)
